--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@
   --transition: all 380ms ease;
 
   --container-width-lg: 75%;
-  --container-width-md: 86%;
+  --container-width-md: 89%;
   --container-width-sm: 90%;
 }
 
